--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31"
+    "@types/react": "^18.0.31",
+    "@types/react-katex": "^3.0.0"
   }
 }
