--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
-    "@types/react-katex": "^3.0.0"
+    "@types/react-katex": "^3.0.0",
+    "prettier": "^2.8.8"
   }
 }
