fix : non-integrable stopping criterias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "**/*.ts",
     "**/*.tsx",
     "src/pages/integral-approximation/components/predefined.jsx",
-    "src/pages/integral-approximation/index.jsx"
+    "src/pages/integral-approximation/index.jsx",
+    "components/MachineProblemDrawer.jsx"
   ],
   "exclude": ["node_modules"]
 }
